--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^1.4.1",
     "markdown-it-named-headers": "^0.0.4",
+    "markdown-it-plantuml": "^0.3.1",
     "opn": "^4.0.2",
     "socket.io": "^1.7.2"
   }
