--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "engines": {
     "vscode": "^1.0.0"
   },
-  "categories": ["Other"],
-  "activationEvents": ["onLanguage:markdown"],
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onLanguage:markdown"
+  ],
   "contributes": {
     "commands": [
       {
@@ -49,6 +53,11 @@
           "type": "number",
           "default": 0,
           "description": "Make instant markdown less instance with a debounce interval (ms)"
+        },
+        "instantmarkdown.scroll": {
+          "type": "boolean",
+          "default": true,
+          "description": "Make instant markdown preview scroll with the VS Code window"
         }
       }
     }
